fix: label & select on mobile

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -86,13 +86,13 @@ hr {
   text-align: center;
 
   &--title {
-    font-weight: 700;
     font-size: 3rem;
+    font-weight: 700;
   }
 
   &--description {
-    font-size: 1.75rem;
     font-family: $font-secondary;
+    font-size: 1.75rem;
     margin-top: 0.5em;
     text-shadow: 0 0.125em 0.125em rgba(0, 0, 0, 0.25);
   }
@@ -102,10 +102,15 @@ hr {
   }
 
   &--label {
-    display: flex;
+    display: block;
     gap: 1em;
     justify-content: space-between;
     margin-top: 0.5em;
+  }
+
+  &--select {
+    margin-left: 1em;
+    width: 60%;
   }
 
   &--button {
